[gd_scene load_steps=58 format=3 uid="uid://c2f8a3fed1w58"]

[ext_resource type="Script" uid="uid://c71adosy667uq" path="res://boto.gd" id="1_6yiw2"]
[ext_resource type="Texture2D" uid="uid://c2ntlmb65hjte" path="res://assets/skeletonAsset/skeletonAsset/skeletonAttack-Sheet146x64.png" id="2_rhchu"]
[ext_resource type="PackedScene" uid="uid://cn8bpbc7jd8wb" path="res://scenes/healthbar.tscn" id="3_jhbhb"]
[ext_resource type="Texture2D" uid="uid://d3m7phc2ugoje" path="res://assets/skeletonAsset/skeletonAsset/skeletonDie-Sheet79x64_body.png" id="3_wek5k"]
[ext_resource type="Texture2D" uid="uid://65gsjqatpbi5" path="res://assets/skeletonAsset/skeletonAsset/skeletonHurt-Sheet64x64.png" id="4_mvml8"]
[ext_resource type="Texture2D" uid="uid://cotunc3pimy4o" path="res://assets/skeletonAsset/skeletonAsset/skeletonIdle-Sheet64x64.png" id="5_ktint"]
[ext_resource type="Texture2D" uid="uid://duyrbcwtwb1cy" path="res://assets/skeletonAsset/skeletonAsset/skeletonMove-Sheet64x64.png" id="6_rawjg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_42ibs"]
atlas = ExtResource("2_rhchu")
region = Rect2(0, 0, 146, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w86t0"]
atlas = ExtResource("2_rhchu")
region = Rect2(146, 0, 146, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylsci"]
atlas = ExtResource("2_rhchu")
region = Rect2(292, 0, 146, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exsy4"]
atlas = ExtResource("2_rhchu")
region = Rect2(438, 0, 146, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48xkp"]
atlas = ExtResource("2_rhchu")
region = Rect2(584, 0, 146, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou2jx"]
atlas = ExtResource("3_wek5k")
region = Rect2(0, 0, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_auw0n"]
atlas = ExtResource("3_wek5k")
region = Rect2(79, 0, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bepsf"]
atlas = ExtResource("3_wek5k")
region = Rect2(158, 0, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_alrq1"]
atlas = ExtResource("3_wek5k")
region = Rect2(237, 0, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b7tj"]
atlas = ExtResource("3_wek5k")
region = Rect2(316, 0, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0wd2"]
atlas = ExtResource("3_wek5k")
region = Rect2(0, 64, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fj38"]
atlas = ExtResource("3_wek5k")
region = Rect2(79, 64, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ui1x"]
atlas = ExtResource("3_wek5k")
region = Rect2(158, 64, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbv3c"]
atlas = ExtResource("3_wek5k")
region = Rect2(237, 64, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wncxd"]
atlas = ExtResource("3_wek5k")
region = Rect2(316, 64, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujqj"]
atlas = ExtResource("3_wek5k")
region = Rect2(0, 128, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqiw6"]
atlas = ExtResource("3_wek5k")
region = Rect2(79, 128, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42j0n"]
atlas = ExtResource("3_wek5k")
region = Rect2(158, 128, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0anr"]
atlas = ExtResource("3_wek5k")
region = Rect2(237, 128, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84cxr"]
atlas = ExtResource("3_wek5k")
region = Rect2(316, 128, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwrfh"]
atlas = ExtResource("3_wek5k")
region = Rect2(0, 192, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_givr8"]
atlas = ExtResource("3_wek5k")
region = Rect2(79, 192, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crgfd"]
atlas = ExtResource("3_wek5k")
region = Rect2(158, 192, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmupr"]
atlas = ExtResource("3_wek5k")
region = Rect2(237, 192, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hb8t"]
atlas = ExtResource("3_wek5k")
region = Rect2(316, 192, 79, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xl7d"]
atlas = ExtResource("4_mvml8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e50ka"]
atlas = ExtResource("4_mvml8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwlln"]
atlas = ExtResource("4_mvml8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vund6"]
atlas = ExtResource("5_ktint")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5yhv"]
atlas = ExtResource("5_ktint")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3adkg"]
atlas = ExtResource("5_ktint")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2coj4"]
atlas = ExtResource("5_ktint")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kslcv"]
atlas = ExtResource("5_ktint")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ke33"]
atlas = ExtResource("5_ktint")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5bgt"]
atlas = ExtResource("5_ktint")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4gkc"]
atlas = ExtResource("5_ktint")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f5d0"]
atlas = ExtResource("6_rawjg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqune"]
atlas = ExtResource("6_rawjg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1u8e"]
atlas = ExtResource("6_rawjg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0jx5"]
atlas = ExtResource("6_rawjg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijirq"]
atlas = ExtResource("6_rawjg")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p1ho"]
atlas = ExtResource("6_rawjg")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cysrk"]
atlas = ExtResource("6_rawjg")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dw0h"]
atlas = ExtResource("6_rawjg")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xkow"]
atlas = ExtResource("6_rawjg")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn4lq"]
atlas = ExtResource("6_rawjg")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mtfb6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42ibs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w86t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylsci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exsy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48xkp")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou2jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auw0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bepsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alrq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b7tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0wd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fj38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ui1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbv3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wncxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mujqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqiw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42j0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0anr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84cxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwrfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_givr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crgfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmupr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hb8t")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xl7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e50ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwlln")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vund6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5yhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3adkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2coj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kslcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ke33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5bgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4gkc")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f5d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqune")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1u8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0jx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijirq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p1ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cysrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dw0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xkow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn4lq")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhchu"]
size = Vector2(20, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wek5k"]
size = Vector2(44, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvml8"]
size = Vector2(87, 36)

[node name="boto" type="CharacterBody2D"]
script = ExtResource("1_6yiw2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mtfb6")
animation = &"attack"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9)
shape = SubResource("RectangleShape2D_rhchu")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="botoHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoHitBox"]
position = Vector2(-3, 7.5)
shape = SubResource("RectangleShape2D_wek5k")

[node name="botoDamageZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoDamageZone"]
position = Vector2(-3.5, 9)
shape = SubResource("RectangleShape2D_mvml8")

[node name="healthbar" parent="." instance=ExtResource("3_jhbhb")]
offset_left = -18.0
offset_top = -16.0
offset_right = 15.0
offset_bottom = -13.0

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="botoHitBox" to="." method="_on_boto_hit_box_area_entered"]
[connection signal="body_entered" from="botoDamageZone" to="." method="_on_boto_damage_zone_body_entered"]
